documentazione API, modifiche patchProdotto * annotazioni OpenApi, index.html generato da swagger-codegen, closes #12 * patchProdotto (era apriProdotto) ora supporta la modifica di quantita, closes #13
